After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647315 - gnome-keyring doesn't compile with GCC 4.6
gnome-keyring doesn't compile with GCC 4.6
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: 3.0.1
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-04-09 21:00 UTC by Marc Plano-Lesay
Modified: 2011-04-23 08:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes some warnings (4.47 KB, patch)
2011-04-09 21:00 UTC, Marc Plano-Lesay
none Details | Review
Patch solving warnings (6.64 KB, patch)
2011-04-21 08:55 UTC, Marc Plano-Lesay
none Details | Review

Description Marc Plano-Lesay 2011-04-09 21:00:13 UTC
Created attachment 185614 [details] [review]
Fixes some warnings

gnome-keyring doesn't compile with GCC 4.6 due to unused variable warnings treated as errors.
Attached patch solve some unused variable warnings, but errors left :
gkm-null-mechanism.c:90:2: error: value computed is not used [-Werror=unused-value]
gkm-null-mechanism.c: In function 'gkm_null_mechanism_unwrap':
gkm-null-mechanism.c:129:2: error: value computed is not used [-Werror=unused-value]
cc1: all warnings being treated as errors
Comment 1 Stef Walter 2011-04-20 05:15:26 UTC
Thanks for catching that. Committed your patch with some additional changes, and fixing up.


commit 33c2185da08e665eb949b155f9edaa8c4618d0f0
Author: Marc Plano-Lesay <marc.planolesay@gmail.com>
Date:   Sat Apr 9 22:58:06 2011 +0200

    fix unused-but-set-variable warnings
    
    https://bugzilla.gnome.org/show_bug.cgi?id=647315

It's on the gnome-3-0 branch and will be included in gnome-keyring-3.0.1
Comment 2 Marc Plano-Lesay 2011-04-21 08:55:19 UTC
Some warnings are still present, patch attached to resolve them
Comment 3 Marc Plano-Lesay 2011-04-21 08:55:43 UTC
Created attachment 186414 [details] [review]
Patch solving warnings
Comment 4 Stef Walter 2011-04-23 08:19:24 UTC
Merged into gnome-3-0 branch with a few tweaks.