fix unused-but-set-variable warnings

https://bugzilla.gnome.org/show_bug.cgi?id=647315